--- a/huntercssa/src/components/style/NavigationBarStyle.css
+++ b/huntercssa/src/components/style/NavigationBarStyle.css
@@ -28,6 +28,7 @@ header {
 
 .navbar {
     width: 100%;
+    z-index: 99999;
     height: 60px;
     max-width: 1200px;
     margin: 70px auto;
@@ -36,6 +37,7 @@ header {
     justify-content: space-between;
     padding-left: 30px;
     padding-right: 40px;
+    
 }
 
 
